--- a/.github/workflows/deploy-production.yaml
+++ b/.github/workflows/deploy-production.yaml
@@ -104,6 +104,10 @@ jobs:
             GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
             GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
             CUSTOM_PLAN_REQUEST_RECIPIENT_EMAIL=${{ secrets.CUSTOM_PLAN_REQUEST_RECIPIENT_EMAIL }}
+            SOCIAL_LINK_X=https://x.com/SOF_IA_CHAT
+            SOCIAL_LINK_LINKEDIN=https://www.linkedin.com/company/sof-ia-chat
+            SOCIAL_LINK_INSTAGRAM=https://www.instagram.com/sof.ia_llm/
+            SOCIAL_LINK_FACEBOOK=https://www.facebook.com/sofiachat.conecta
             ENV_EOF
 
             # Ensure pgvector is installed
