Add social media links to email templates and config
The changes add social media links (X/Twitter, LinkedIn, Instagram,
Facebook) to: 1. Environment configuration files 2. Config module 3.
Email templates 4. Email service for rendering templates

--- a/.github/workflows/deploy-production.yaml
+++ b/.github/workflows/deploy-production.yaml
@@ -145,6 +145,10 @@ jobs:
             BASE_MODEL_API_KEY=${{ secrets.PROD_BASE_MODEL_API_KEY }}
             FREE_CONVERSATION_LIMIT=50
             CUSTOM_PLAN_REQUEST_RECIPIENT_EMAIL=frank@pixeldigita.com
+            SOCIAL_LINK_X=https://x.com/SOF_IA_CHAT
+            SOCIAL_LINK_LINKEDIN=https://www.linkedin.com/company/sof-ia-chat
+            SOCIAL_LINK_INSTAGRAM=https://www.instagram.com/sof.ia_llm/
+            SOCIAL_LINK_FACEBOOK=https://www.facebook.com/sofiachat.conecta
             ENV_EOF
 
       - name: Execute Blue-Green Action
