fix wss for prod

--- a/.github/workflows/deploy-production.yaml
+++ b/.github/workflows/deploy-production.yaml
@@ -85,7 +85,7 @@ jobs:
             NODEMAILER_PASS=${{ secrets.PROD_NODEMAILER_PASS }}
             NODEMAILER_FROM=noreply@converxa.net
             URL_FILES=https://back-chat.converxa.net
-            URL_WSS=wss://back-chat.converxa.net
+            URL_WSS=wss://back-chat.converxa.net/api/socket/web-chat
             URL_WEBHOOK_WA=https://back-chat.converxa.net/webhook/whatsapp
             OPENAI_API_KEY=${{ secrets.PROD_OPENAI_API_KEY }}
             FACEBOOK_APP_ID=your-facebook-app-id
